src/objects/Pricing__c.object
<CustomObject>
    <fields>
        <fullName>Language_From__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language From</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Pricing</relationshipLabel>
        <relationshipName>Pricing</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Language To</label>
        <referenceTo>Language__c</referenceTo>
        <relationshipLabel>Pricing (Language To)</relationshipLabel>
        <relationshipName>Pricing1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cat_hu__c</fullName>
        <label>cat_hu</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cat_int__c</fullName>
        <label>cat_int</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>from_lang_code__c</fullName>
        <label>from_lang_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>to_lang_code__c</fullName>
        <label>to_lang_code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Pricing</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Language_From__c</columns>
        <columns>Language_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Import_Workbench</fullName>
        <columns>NAME</columns>
        <columns>Language_From__c</columns>
        <columns>Language_To__c</columns>
        <columns>from_lang_code__c</columns>
        <columns>to_lang_code__c</columns>
        <columns>cat_hu__c</columns>
        <columns>cat_int__c</columns>
        <filterScope>Everything</filterScope>
        <label>Import Workbench</label>
    </listViews>
    <nameField>
        <label>Pricing Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>